--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.0.1-DEV"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 OrdinaryDiffEqCore = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
+OrdinaryDiffEqTsit5 = "b1df2697-797e-41e3-8120-5422d3b24e4a"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
@@ -16,6 +17,7 @@ Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 DataStructures = "0.18.22"
 DiffEqBase = "6.165.1"
 OrdinaryDiffEqCore = "1.19.0"
+OrdinaryDiffEqTsit5 = "1.1.0"
 SciMLBase = "2.77.0"
 TimerOutputs = "0.5.28"
 UnPack = "1.0.2"
