--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Unrolled = "9602ed7d-8fef-5bc8-8597-8f21381861e8"
 DataStructures = "0.18.22"
 DiffEqBase = "6.165.1"
 OrdinaryDiffEqCore = "1.19.0"
+OrdinaryDiffEqTsit5 = "1.1.0"
 SciMLBase = "2.77.0"
 TimerOutputs = "0.5.28"
 UnPack = "1.0.2"
@@ -23,7 +24,8 @@ Unrolled = "0.1.5"
 julia = "1.9"
 
 [extras]
+OrdinaryDiffEqTsit5 = "b1df2697-797e-41e3-8120-5422d3b24e4a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "OrdinaryDiffEqTsit5"]
