--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "OrdinaryDiffEqOperatorSplitting"
 uuid = "760fc936-9fa0-4281-9c1a-468957eedc89"
 authors = ["Dennis Ogiermann <termi-official@users.noreply.github.com> and contributors"]
-version = "0.1.0"
+version = "0.2.0"
 
 [deps]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
@@ -17,6 +17,7 @@ DataStructures = "0.18.22"
 DiffEqBase = "6.165.1"
 OrdinaryDiffEqCore = "1.19.0"
 OrdinaryDiffEqTsit5 = "1.1.0"
+SafeTestsets = "0.1.0"
 SciMLBase = "2.77.0"
 TimerOutputs = "0.5.28"
 UnPack = "1.0.2"
@@ -26,7 +27,8 @@ julia = "1.9"
 [extras]
 OrdinaryDiffEqLowOrderRK = "1344f307-1e59-4825-a18e-ace9aa3fa4c6"
 OrdinaryDiffEqTsit5 = "b1df2697-797e-41e3-8120-5422d3b24e4a"
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "OrdinaryDiffEqLowOrderRK", "OrdinaryDiffEqTsit5"]
+test = ["Test", "OrdinaryDiffEqLowOrderRK", "OrdinaryDiffEqTsit5", "SafeTestsets"]
